--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,8 +17,10 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+      working-directory: ./e2etests
     - name: Run Playwright tests
       run: npx playwright test
+      working-directory: ./e2etests
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
